# escurel

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
crates/escurel-admin/: Cargo.toml
crates/escurel-admin/src/: lib.rs
crates/escurel-auth/: Cargo.toml
crates/escurel-auth/src/: jwks.rs  lib.rs  verifier.rs
crates/escurel-auth/tests/: multi_issuer.rs  oidc.rs
crates/escurel-cli/: Cargo.toml
crates/escurel-cli/src/: admin.rs  agent.rs  convert.rs  main.rs  output.rs  workflow.rs
crates/escurel-cli/tests/: cli_admin_e2e.rs  cli_e2e.rs  cli_ingest_e2e.rs  cli_parity.rs  cli_session_e2e.rs  cli_workflow_e2e.rs
crates/escurel-client/: Cargo.toml
crates/escurel-client/src/: admin.rs  error.rs  lib.rs  transport.rs
crates/escurel-client/tests/: admin_roundtrip.rs  client_roundtrip.rs  sql_view_search.rs  streaming_roundtrip.rs
crates/escurel-crdt/: Cargo.toml
crates/escurel-crdt/src/: backend.rs  codec.rs  error.rs  lib.rs  livedoc.rs  pg.rs  reconciler.rs
crates/escurel-crdt/tests/: ducklake_crdt_live.rs  livedoc_roundtrip.rs  reconciler_roundtrip.rs
crates/escurel-demo-agent/: Cargo.toml
crates/escurel-demo-agent/src/: error.rs  lib.rs  main.rs
crates/escurel-demo-agent/tests/: process_inbox.rs
crates/escurel-embed/: Cargo.toml
crates/escurel-embed/src/: candle.rs  cross_encoder.rs  gemini.rs  hash.rs  lib.rs  reloadable.rs  reranker.rs  zero.rs
crates/escurel-embed/tests/: candle_embedder.rs  cross_encoder.rs  gemini_embedder.rs  hash_embedder.rs  zero_embedder.rs
crates/escurel-eval/: Cargo.toml
crates/escurel-eval/src/: config.rs  dataset.rs  error.rs  gate.rs  ingest.rs  latency.rs  lib.rs  main.rs  metrics.rs  report.rs
crates/escurel-eval/tests/: metrics_unit.rs  smoke.rs
crates/escurel-explore-bff/: Cargo.toml
crates/escurel-explore-bff/src/: lib.rs  main.rs
crates/escurel-explore-bff/tests/: bff.rs
crates/escurel-index/: Cargo.toml
crates/escurel-index/sql/: 0001_a_autoload.sql  0001_b_tables.sql  0001_c_fts.sql  0002_chat_messages.sql  0003_scenarios.sql  0004_events.sql  0005_group_members.sql  0006_external_credentials.sql  0007_block_context.sql  0008_external_endpoints.sql  0009_pack_subscriptions.sql
crates/escurel-index/src/: acl.rs  chat.rs  citation.rs  crdt_history.rs  creds.rs  endpoints.rs  events.rs  filter.rs  groups.rs  indexer.rs  lib.rs  meta_skill.md  meta_skill.rs  pack.rs  query.rs  read.rs  retrieval.rs  schema.rs  search.rs  validate.rs
crates/escurel-index/tests/: acl.rs  as_of.rs  backend_registry.rs  chat_messages.rs  citation_lookup.rs  contextual_retrieval.rs  crash_recovery.rs  credentials.rs  delete_page.rs  document_rebuild.rs  ducklake_adopt.rs  ducklake_adopt_live.rs  ducklake_chat_live.rs  ducklake_crdt_live.rs  ducklake_events_live.rs  ducklake_publish.rs  ducklake_publish_live.rs  embed_lock.rs  endpoints.rs  events.rs  frontmatter_links.rs  historical_expand.rs  index_roundtrip.rs  kreuzberg_extract.rs  live_inspect.rs  merge_from_attached.rs  migrate.rs  neighbours.rs  query_instance.rs  read_tools.rs  rerank.rs  resolve_expand.rs  run_stored_query.rs  scenarios.rs  search.rs  seed.rs  seed_events.rs  sql_bindings.rs  sql_view_backend.rs  sql_view_postgres.rs  (+4 more)
crates/escurel-loader/: Cargo.toml
crates/escurel-loader/src/: lib.rs  main.rs
crates/escurel-loader/tests/: build.rs  copy_files.rs  enrich.rs  transfer.rs
crates/escurel-md/: Cargo.toml
crates/escurel-md/src/: lib.rs  wikilink.rs
crates/escurel-md/tests/: examples_crm_demo.rs  parse_frontmatter.rs  parse_wikilinks.rs
crates/escurel-obs/: Cargo.toml
crates/escurel-obs/src/: lib.rs  log_fields.rs  metrics.rs  telemetry.rs
crates/escurel-obs/tests/: metrics_render.rs  telemetry_init.rs
crates/escurel-proto/: Cargo.toml  build.rs
crates/escurel-proto/proto/: escurel.proto
crates/escurel-proto/src/: lib.rs
crates/escurel-proto/tests/: health_roundtrip.rs
crates/escurel-quota/: Cargo.toml
crates/escurel-quota/src/: lib.rs  manager.rs  token_bucket.rs
crates/escurel-quota/tests/: quota.rs
crates/escurel-runner/: Cargo.toml
crates/escurel-runner-core/: Cargo.toml
crates/escurel-runner-core/src/: admit.rs  cascade.rs  config.rs  dispatch.rs  ledger.rs  lib.rs  packager.rs  quota.rs  reconciler.rs  recovery.rs  trigger.rs  workflow.rs
crates/escurel-runner-harness/: Cargo.toml
crates/escurel-runner-harness/src/: adk.rs  claude.rs  codex.rs  echo.rs  harness.rs  lib.rs  task.rs
crates/escurel-runner-harness/tests/: adk_adapter.rs  claude_adapter.rs  codex_adapter.rs
crates/escurel-runner-workflow/: Cargo.toml
crates/escurel-runner-workflow/src/: barrier.rs  budget.rs  corpus.rs  key.rs  lib.rs  reduce.rs  spec.rs  step.rs
crates/escurel-runner/src/: main.rs
crates/escurel-runner/tests/: adk_end_to_end.rs  adk_live.rs  cascade_lineage.rs  cascade_trace.rs  claude_live.rs  codex_live.rs  echo_end_to_end.rs  healthz.rs  inbox_poll.rs  loop_controls.rs  packager.rs  quota_throttle.rs  reconcile_retry.rs  run_ledger.rs  sigterm_drain.rs  trigger.rs  workflow_end_to_end.rs
crates/escurel-server/: Cargo.toml
crates/escurel-server/src/: auth_gate.rs  config.rs  config_probe.rs  grpc.rs  health.rs  lib.rs  main.rs  mcp.rs  pack.rs  remote_backend.rs  server.rs  session.rs  snapshot_publish.rs  snapshot_refresh.rs  tenant_archive.rs  webhook.rs  ws.rs
crates/escurel-server/tests/: admin_mcp_tools.rs  admin_publish.rs  auth_quota.rs  backend_read_limits.rs  binary_boots.rs  chat_acl.rs  chat_admin.rs  chat_messages.rs  crm_demo_backends.rs  delete_page.rs  document_ingestion.rs  events.rs  events_grpc.rs  fusion_acl.rs  group_members_acl.rs  grpc_admin.rs  grpc_admin_compaction.rs  grpc_admin_crud.rs  grpc_admin_external_reload.rs  grpc_admin_lanes.rs  grpc_admin_streaming.rs  grpc_live_session.rs  health.rs  mcp.rs  (+43 more)
crates/escurel-storage/: Cargo.toml
crates/escurel-test-support/: Cargo.toml
crates/escurel-tui/: Cargo.toml
crates/escurel-types/: Cargo.toml
examples/echo-app/: Cargo.toml  README.md
(+350 files in other folders)
