[workspace]
resolver = "2"
members = [
    "crates/escurel-md",
    "crates/escurel-storage",
    "crates/escurel-index",
]

[workspace.package]
edition = "2024"
rust-version = "1.86"
version = "0.0.0"
license = "BUSL-1.1"
authors = ["DataZoo GmbH <hello@data-zoo.de>"]
repository = "https://github.com/DataZooDE/escurel"
homepage = "https://github.com/DataZooDE/escurel"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
