[workspace]
resolver = "2"
members = [
    "crates/escurel-md",
    "crates/escurel-obs",
    "crates/escurel-storage",
    "crates/escurel-index",
    "crates/escurel-embed",
    "crates/escurel-auth",
    "crates/escurel-quota",
    "crates/escurel-proto",
    "crates/escurel-admin",
    "crates/escurel-server",
    "crates/escurel-cli",
    "crates/escurel-client",
    "crates/escurel-crdt",
    "crates/escurel-test-support",
    "examples/echo-app",
]

[workspace.package]
edition = "2024"
rust-version = "1.86"
version = "1.0.0"
license = "BUSL-1.1"
authors = ["DataZoo GmbH <hello@data-zoo.de>"]
repository = "https://github.com/DataZooDE/escurel"
homepage = "https://github.com/DataZooDE/escurel"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
