[workspace]
resolver = "2"
members = [
    "crates/escurel-md",
    "crates/escurel-obs",
    "crates/escurel-storage",
    "crates/escurel-index",
    "crates/escurel-embed",
    "crates/escurel-auth",
    "crates/escurel-quota",
    "crates/escurel-types",
    "crates/escurel-admin",
    "crates/escurel-server",
    "crates/escurel-cli",
    "crates/escurel-client",
    "crates/escurel-tui",
    "crates/escurel-demo-agent",
    "crates/escurel-explore-bff",
    "crates/escurel-crdt",
    "crates/escurel-test-support",
    "crates/escurel-runner-core",
    "crates/escurel-runner-harness",
    "crates/escurel-runner",
    "examples/echo-app",
]

[workspace.package]
edition = "2024"
# Bumped 1.88 -> 1.91 to admit the `kreuzberg` document extractor crate
# (4.9.9 declares rust-version 1.91). Built toolchains + the substrate golden
# image must be >= 1.91. See docs/notes/discovered/2026-06-21-kreuzberg-msrv-191.md.
rust-version = "1.91"
version = "1.0.0"
license = "BUSL-1.1"
authors = ["DataZoo GmbH <hello@data-zoo.de>"]
repository = "https://github.com/DataZooDE/escurel"
homepage = "https://github.com/DataZooDE/escurel"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
