[package]
name = "escurel-admin"
description = "Admin surface for Escurel: tenant CRUD against a filesystem-backed TenantStore."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
duckdb = { version = "1", features = ["bundled"] }
escurel-index = { path = "../escurel-index" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs", "rt", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
