[package]
name = "escurel-auth"
description = "OIDC verification + tenant resolution for Escurel."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
base64 = "0.22"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[lints]
workspace = true
