[package]
name = "escurel-cli"
description = "Operator + agent-style CLI for the Escurel gateway (thin gRPC client)."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "escurel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
escurel-proto = { path = "../escurel-proto" }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-std", "io-util", "sync", "time"] }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport"] }

[dev-dependencies]
assert_cmd = "2"
escurel-test-support = { path = "../escurel-test-support" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
