[package]
name = "escurel-cli"
description = "Operator + agent-style CLI for the Escurel gateway, built on escurel-client."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "escurel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
# Single typed gateway abstraction. The CLI is pure presentation on top
# of it — no hand-rolled transport, just the typed escurel-client.
escurel-client = { path = "../escurel-client" }
# `escurel ui` launches the interactive k9s-style terminal browser, which
# is itself pure presentation over escurel-client.
escurel-tui = { path = "../escurel-tui" }
# preserve_order keeps emitted JSON / table columns in the order the
# command authored them, not alphabetised.
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
# Fresh run ids for `workflow run` (the invocation is a side-effecting CLI
# call, so a random id is fine here — determinism lives in the reducer).
ulid = "1"
# Draining server-streams (rebuild / compact / export) + building the
# import input stream for the admin streaming commands.

[dev-dependencies]
assert_cmd = "2"
# Decode the base64 blob `page blob` returns, in the ingest e2e.
base64 = "0.22"
# The layer/shadow e2e seeds base pages through a test-owned Indexer
# (`seed_from_dir` — the pack-import path); fixtures can't create
# `layer: base@…` pages because they replay through `update_page`.
duckdb = { version = "1", default-features = false }
# Admin e2e spawns a gateway with a real TenantStore + quota wired.
escurel-admin = { path = "../escurel-admin" }
escurel-embed = { path = "../escurel-embed" }
escurel-index = { path = "../escurel-index" }
escurel-quota = { path = "../escurel-quota" }
escurel-storage = { path = "../escurel-storage" }
escurel-test-support = { path = "../escurel-test-support" }
# The parity guard reads the live `tools/list` off the running gateway.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
