[package]
name = "escurel-client"
description = "Typed MCP-over-HTTP client for the Escurel v1 surface."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22"
escurel-types = { path = "../escurel-types" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
escurel-test-support = { path = "../escurel-test-support" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[lints]
workspace = true
