[package]
name = "escurel-crdt"
description = "In-memory Loro CRDT engine + LiveDoc actor with DuckDB-backed op log and snapshots."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Loro 1.x stable: matches the API surface used in
# `LoroDoc::new` / `get_text` / `export(ExportMode::Updates...)` /
# `import` documented at https://docs.rs/loro/1.12.0/loro/.
loro = "1.12"
# Bundled DuckDB to match `escurel-index`. Sharing a single
# Connection across the indexer and the CRDT backend is the
# production pattern (see
# `docs/notes/discovered/2026-05-24-duckdb-second-connection-stale.md`).
duckdb = { version = "1", features = ["bundled"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

[dev-dependencies]
anyhow = "1"
escurel-index = { path = "../escurel-index" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
