[package]
name = "escurel-embed"
description = "Embedding abstraction for Escurel: Embedder trait + stub impls. EmbeddingGemma + Gemini API impls land in later PRs."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
