[package]
name = "escurel-embed"
description = "Embedding abstraction for Escurel: Embedder trait + stub impls. EmbeddingGemma + Gemini API impls land in later PRs."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
# Pulls in reqwest for the HTTP-backed `GeminiEmbedder`. Off by
# default so the bulk of the crate (Embedder trait + ZeroEmbedder
# + HashEmbedder) stays dep-light.
gemini = ["dep:reqwest", "dep:serde"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[lints]
workspace = true
