[package]
name = "escurel-explore-bff"
description = "Auth-bridging reverse proxy (BFF) for the escurel-explore SPA: mints short-lived OIDC JWTs and forwards /mcp to escurel."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "escurel-explore-bff"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
escurel-auth = { path = "../escurel-auth" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
