[package]
name = "escurel-index"
description = "DuckDB-backed index for Escurel: relational + vss + fts + CRDT op log."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# In-process PDF/DOCX/PPTX extraction via the kreuzberg crate (ELv2-licensed;
# `bundled-pdfium` vendors pdfium so the PDF path is self-contained). Gated
# OFF by default — the default build stays light + offline (born-digital text
# extraction needs no native deps). Substrate builds enable it. Pulls a heavy
# native dependency (pdfium); requires rust-version >= 1.91. See
# docs/notes/discovered/2026-06-21-kreuzberg-msrv-191.md.
kreuzberg = ["dep:kreuzberg", "dep:html-to-markdown-rs"]

[dependencies]
# DuckDB via the downloaded precompiled libduckdb release (NOT the
# bundled C++ compile). The `DUCKDB_DOWNLOAD_LIB=1` env in
# `.cargo/config.toml` makes libduckdb-sys fetch the matching DuckDB
# release from github.com/duckdb/duckdb/releases and link it, skipping
# the ~2–3 min cold C++ amalgamation compile. Any project that builds
# these crates MUST set that env var (there is no bundled fallback);
# see docs/notes/discovered/2026-06-20-duckdb-download-instead-of-build.md.
duckdb = { version = "1", default-features = false }
anyhow = "1"
async-trait = "0.1"
# `escurel-crdt` is pulled in solely so we can implement its
# `CitationLookup` trait on top of the `Indexer`'s DuckDB
# connection (see `citation.rs`). This is the only escurel-crdt
# surface we touch — the dep is one-way and does NOT create a
# cycle (escurel-crdt does not depend on escurel-index).
escurel-crdt = { path = "../escurel-crdt" }
escurel-embed = { path = "../escurel-embed" }
escurel-md = { path = "../escurel-md" }
escurel-storage = { path = "../escurel-storage" }
bytes = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
# ULID for server-generated chat_messages.msg_id when the caller
# omits it. Crockford base32, 26 chars, lexicographically sortable
# by encoded timestamp.
ulid = "1"
# Base64 cursor encoding for list_chat_messages pagination.
base64 = "0.22"
# In-process document extractor (PDF/DOCX/PPTX), behind the `kreuzberg`
# feature. ELv2-licensed (see deny.toml). `bundled-pdfium` vendors pdfium.
kreuzberg = { version = "4.9.9", default-features = false, features = [
    "tokio-runtime",
    "pdf",
    "bundled-pdfium",
    "office",
    "chunking",
], optional = true }
# Transitive pin: kreuzberg 4.9.9's `^3.5.7` on html-to-markdown-rs resolves
# to 3.6.0+, which does NOT compile (image `dimensions` tuple→struct break).
# 3.5.7 is the last working version (spike S5).
html-to-markdown-rs = { version = "=3.5.7", optional = true }

[dev-dependencies]
bytes = "1"
escurel-embed = { path = "../escurel-embed" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
async-trait = "0.1"
# Live SQL-view connector round-trip (sql_view_postgres.rs): a real Postgres
# in a testcontainer + a real libpq client to seed it. No mocks.
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio-postgres = "0.7"

[lints]
workspace = true
