[package]
name = "escurel-md"
description = "Markdown parser for Escurel: frontmatter + typed wikilinks."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
regex = "1"
serde_yaml_ng = "0.10"
thiserror = "2"

[lints]
workspace = true
