[package]
name = "escurel-obs"
description = "Observability for Escurel: a JSON tracing subscriber emitting the substrate log contract (ts/level/msg/app/env/version/request_id), an optional OTLP trace exporter, and a Prometheus metrics registry rendered as text/plain;version=0.0.4."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Prometheus chosen over the `metrics` + `metrics-exporter-prometheus`
# pair: it exposes a per-instance `Registry` plus `TextEncoder`, so the
# gateway can hold one `Metrics` value and render explicitly — no
# process-global recorder, which keeps the registry test-isolatable.
prometheus = "0.14"

# tracing stack. The `json` feature gives structured output; we layer a
# custom event formatter on top so the field names match the substrate
# contract exactly (ts/level/msg/app/env/version/request_id).
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }

# OpenTelemetry — version-lockstep set. tracing-opentelemetry 0.33 pairs
# with opentelemetry/opentelemetry_sdk/opentelemetry-otlp 0.32.
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
